# tech_challenge

./: .gitmodules  BaseConnectionHandler.cpp  CMakeLists.txt  FlightInfoOne.cpp  FlightInfoTwo.cpp  MessageHandler.cpp  MessageReceiver.cpp  README.md  Utils.cpp  main.cpp
.github/workflows/: ccpp.yml
header/: BaseConnectionHandler.h  BaseDbManager.h  BaseFlightInfo.h  BaseParserModule.h  ConnectionHandler.h  FlightInfoOne.h  FlightInfoOneData.h  FlightInfoTwo.h  FlightInfoTwoData.h  MessageHandler.h  MessageReceiver.h  Parser.h  ParserJsonConverters.h  ThreadSafeQueue.h  Utils.h
test/: CMakeLists.txt  FlightInfoOne_test.cpp  FlightInfoOne_test.h  FlightInfoTwo_test.cpp  FlightInfoTwo_test.h  Integration_test.cpp  Integration_test.h  MessageHandler_test.cpp  MessageHandler_test.h  MessageReceiver_test.cpp  MessageReceiver_test.h  Parser_test.cpp  Parser_test.h  ThreadSafeQueue_test.cpp  ThreadSafeQueue_test.h
test/mocks/: MockConnectionHandler.cpp  MockConnectionHandler.h  MockDbManager.cpp  MockDbManager.h
